save button component

--- a/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
+++ b/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
@@ -1,5 +1,5 @@
 <p-card header="Input Component">
-  <p-accordion>
+  <p-accordion [multiple]="true">
     <p-accordionTab header="Basic">
       <app-input-primeng
         [label]="'Basic'"
