save function to change themes

--- a/src/app/components/examples/themes-primeng-example/themes-primeng-example.component.html
+++ b/src/app/components/examples/themes-primeng-example/themes-primeng-example.component.html
@@ -1,1 +1,7 @@
-<p>themes-primeng-example works!</p>
+<p-card header="Themes">
+  <p-accordion [multiple]="true">
+    <p-accordionTab *ngFor="let theme of listThemes" header="{{theme.name}}">
+      <button pButton type="button" label="{{theme.name}}" (click)="appComponent.changeTheme(theme.code)"></button>
+    </p-accordionTab>
+  </p-accordion>
+</p-card>
