add text area like option on input

--- a/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
+++ b/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
@@ -18,6 +18,12 @@
         [required]="true"
       ></app-input-primeng>
     </p-accordionTab>
+    <p-accordionTab header="Text Area">
+      <app-input-primeng
+        [label]="'Text Area'"
+        [isTextArea]="true"
+      ></app-input-primeng>
+    </p-accordionTab>
     <p-accordionTab header="Types">
       <div class="container">
         <div class="row">
