add upload file like option on input

--- a/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
+++ b/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
@@ -24,6 +24,12 @@
         [isTextArea]="true"
       ></app-input-primeng>
     </p-accordionTab>
+    <p-accordionTab header="Upload File">
+      <app-input-primeng
+        [label]="'Upload File'"
+        [isUploadFile]="true"
+      ></app-input-primeng>
+    </p-accordionTab>
     <p-accordionTab header="Types">
       <div class="container">
         <div class="row">
