add editor like option on input

--- a/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
+++ b/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
@@ -30,6 +30,12 @@
         [isUploadFile]="true"
       ></app-input-primeng>
     </p-accordionTab>
+    <p-accordionTab header="Editor">
+      <app-input-primeng
+        [label]="'Editor'"
+        [isEditor]="true"
+      ></app-input-primeng>
+    </p-accordionTab>
     <p-accordionTab header="Types">
       <div class="container">
         <div class="row">
