add string list and checkbox like option on input

--- a/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
+++ b/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
@@ -18,24 +18,6 @@
         [required]="true"
       ></app-input-primeng>
     </p-accordionTab>
-    <p-accordionTab header="Text Area">
-      <app-input-primeng
-        [label]="'Text Area'"
-        [isTextArea]="true"
-      ></app-input-primeng>
-    </p-accordionTab>
-    <p-accordionTab header="Upload File">
-      <app-input-primeng
-        [label]="'Upload File'"
-        [isUploadFile]="true"
-      ></app-input-primeng>
-    </p-accordionTab>
-    <p-accordionTab header="Editor">
-      <app-input-primeng
-        [label]="'Editor'"
-        [isEditor]="true"
-      ></app-input-primeng>
-    </p-accordionTab>
     <p-accordionTab header="Types">
       <div class="container">
         <div class="row">
@@ -132,6 +114,37 @@
         [type]="enumTypeInput.Date"
         [minimumDate]="date1"
         [maximumDate]="date2"
+      ></app-input-primeng>
+    </p-accordionTab>
+    <p-accordionTab header="Text Area">
+      <app-input-primeng
+        [label]="'Text Area'"
+        [isTextArea]="true"
+      ></app-input-primeng>
+    </p-accordionTab>
+    <p-accordionTab header="Upload File">
+      <app-input-primeng
+        [label]="'Upload File'"
+        [isUploadFile]="true"
+      ></app-input-primeng>
+    </p-accordionTab>
+    <p-accordionTab header="Editor">
+      <app-input-primeng
+        [label]="'Editor'"
+        [isEditor]="true"
+      ></app-input-primeng>
+    </p-accordionTab>
+    <p-accordionTab header="Checkbox">
+      <app-input-primeng
+        [label]="'Checkbox'"
+        [isCheckbox]="true"
+        [value]="true"
+      ></app-input-primeng>
+    </p-accordionTab>
+    <p-accordionTab header="String List">
+      <app-input-primeng
+        [label]="'String List'"
+        [isStringList]="true"
       ></app-input-primeng>
     </p-accordionTab>
   </p-accordion>
