add radio button input like option on input

--- a/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
+++ b/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
@@ -151,6 +151,14 @@
               [value]="true"
             ></app-input-primeng>
           </div>
+          <div class="col-6">
+            <app-input-primeng
+              [label]="'Radio Button'"
+              [isRadioButton]="true"
+              [listRadioButtons]="['Item 1', 'Item 2']"
+              [value]="'Item 1'"
+            ></app-input-primeng>
+          </div>
         </div>
       </div>
     </p-accordionTab>
