add checkbox button input like option on input

--- a/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
+++ b/src/app/components/examples/input-primeng-example/input-primeng-example.component.html
@@ -159,6 +159,13 @@
               [value]="'Item 1'"
             ></app-input-primeng>
           </div>
+          <div class="col-6">
+            <app-input-primeng
+              [label]="'Checkbox Button'"
+              [isCheckboxButton]="true"
+              [value]="true"
+            ></app-input-primeng>
+          </div>
         </div>
       </div>
     </p-accordionTab>
