--- a/src/app/components/shared/button-primeng/button-primeng.component.html
+++ b/src/app/components/shared/button-primeng/button-primeng.component.html
@@ -1,5 +1,6 @@
 <div class="col-12 m-1 d-flex justify-content-center align-items-center">
   <p-button
+    *ngIf="!withMenu"
     [disabled]="disabled"
     [loading]="loading"
     (onClick)="returnOnClick()"
@@ -10,5 +11,15 @@
     badgeClass="{{ badgeClass }}"
     badge="{{badge}}"
   ></p-button>
+  <p-splitButton
+    *ngIf="withMenu"
+    [disabled]="disabled"
+    label="{{ label }}"
+    icon="{{ icon }}"
+    iconPos="{{ iconPos }}"
+    styleClass="{{ styleClass }}"
+    (onClick)="returnOnClick()"
+    [model]="optionsMenu"
+  ></p-splitButton>
 </div>
 
