add circle float button input like option on input

--- a/src/app/components/examples/button-primeng-example/button-primeng-example.component.html
+++ b/src/app/components/examples/button-primeng-example/button-primeng-example.component.html
@@ -134,6 +134,14 @@
         [optionsMenu]="itemsButton"
       ></app-button-primeng>
     </p-accordionTab>
+    <p-accordionTab header="Circle Float">
+      <app-button-primeng
+        [label]="'Circle Float'"
+        [buttonCircleFloat]="true"
+        [optionsMenu]="itemsButton"
+        [icon]="enumIcon.bars"
+      ></app-button-primeng>
+    </p-accordionTab>
     <p-accordionTab header="With Badge">
       <app-button-primeng
         [label]="'With Badge'"
