sweet alert installation without configuration

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
 <p-card header="Home">
-  Browse by the menu to see the components
+  Browse by the menu to see the components. More components of the framework
+  <a target="_blank" [href]="'https://primefaces.org/primeng/showcase/#/'">here</a>.
 </p-card>
