--- a/src/app/components/shared/word-primeng/word-primeng.component.html
+++ b/src/app/components/shared/word-primeng/word-primeng.component.html
@@ -1,46 +1,46 @@
 <div style="padding: 0; margin: 0" class="{{styleClass}}">
-  <h1 *ngIf="enumTypeWord.Title == type">
-    <p *ngIf="strong && textDecoration != enumTextDecoration.Link">
-      <strong>  {{ value }} </strong>
+  <h1 style="padding: 0; margin: 0" *ngIf="enumTypeWord.Title == type">
+    <p style="padding: 0; margin: 0" *ngIf="strong && textDecoration != enumTextDecoration.Link">
+      <strong style="padding: 0; margin: 0">  {{ value }} </strong>
     </p>
-    <p *ngIf="!strong && textDecoration != enumTextDecoration.Link">
+    <p style="padding: 0; margin: 0" *ngIf="!strong && textDecoration != enumTextDecoration.Link">
       {{ value }}
     </p>
-    <a *ngIf="strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
-      <strong>  {{ value }} </strong>
+    <a style="padding: 0; margin: 0" *ngIf="strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
+      <strong style="padding: 0; margin: 0">  {{ value }} </strong>
     </a>
-    <a *ngIf="!strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
-      <strong>  {{ value }} </strong>
+    <a style="padding: 0; margin: 0" *ngIf="!strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
+      <strong style="padding: 0; margin: 0">  {{ value }} </strong>
     </a>
   </h1>
 
-  <h3 *ngIf="enumTypeWord.Subtitle == type">
-    <p *ngIf="strong && textDecoration != enumTextDecoration.Link">
-      <strong>  {{ value }} </strong>
+  <h3 style="padding: 0; margin: 0" *ngIf="enumTypeWord.Subtitle == type">
+    <p style="padding: 0; margin: 0" *ngIf="strong && textDecoration != enumTextDecoration.Link">
+      <strong style="padding: 0; margin: 0">  {{ value }} </strong>
     </p>
-    <p *ngIf="!strong && textDecoration != enumTextDecoration.Link">
+    <p style="padding: 0; margin: 0" *ngIf="!strong && textDecoration != enumTextDecoration.Link">
       {{ value }}
     </p>
-    <a *ngIf="strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
-      <strong>  {{ value }} </strong>
+    <a style="padding: 0; margin: 0" *ngIf="strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
+      <strong style="padding: 0; margin: 0">  {{ value }} </strong>
     </a>
-    <a *ngIf="!strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
-      <strong>  {{ value }} </strong>
+    <a style="padding: 0; margin: 0" *ngIf="!strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
+      <strong style="padding: 0; margin: 0">  {{ value }} </strong>
     </a>
   </h3>
 
-  <h6 *ngIf="enumTypeWord.Normal == type" class="{{ styleClass }}">
-    <p *ngIf="strong && textDecoration != enumTextDecoration.Link">
-      <strong>  {{ value }} </strong>
+  <h6 style="padding: 0; margin: 0" *ngIf="enumTypeWord.Normal == type" class="{{ styleClass }}">
+    <p style="padding: 0; margin: 0" *ngIf="strong && textDecoration != enumTextDecoration.Link">
+      <strong style="padding: 0; margin: 0">  {{ value }} </strong>
     </p>
-    <p *ngIf="!strong && textDecoration != enumTextDecoration.Link">
+    <p style="padding: 0; margin: 0" *ngIf="!strong && textDecoration != enumTextDecoration.Link">
       {{ value }}
     </p>
-    <a *ngIf="strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
-      <strong>  {{ value }} </strong>
+    <a style="padding: 0; margin: 0" *ngIf="strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
+      <strong style="padding: 0; margin: 0">  {{ value }} </strong>
     </a>
-    <a *ngIf="!strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
-      <strong>  {{ value }} </strong>
+    <a style="padding: 0; margin: 0" *ngIf="!strong && textDecoration == enumTextDecoration.Link" href="{{refOfTheLink}}">
+      <strong style="padding: 0; margin: 0">  {{ value }} </strong>
     </a>
   </h6>
 </div>
