--- a/src/app/components/shared/calendar-primeng/calendar-primeng.component.html
+++ b/src/app/components/shared/calendar-primeng/calendar-primeng.component.html
@@ -10,6 +10,8 @@
         [disabled]="disabled"
         [readonlyInput]="true"
         [required]="required"
+        [pTooltip]="labelTooltip"
+        [tooltipPosition]="positionTooltip.toLowerCase()"
         [class]="styleClass"
         (onSelect)="validations()"
       ></p-calendar>
