--- a/src/app/components/shared/dropdown-primeng/dropdown-primeng.component.html
+++ b/src/app/components/shared/dropdown-primeng/dropdown-primeng.component.html
@@ -10,6 +10,8 @@
       [class]="styleClass"
       [filterBy]="labelSelected"
       [disabled]="disabled"
+      [pTooltip]="labelTooltip"
+      [tooltipPosition]="positionTooltip.toLowerCase()"
       [placeholder]="namePlaceholder">
     </p-dropdown>
   </div>
