--- a/src/app/components/shared/table-primeng/table-primeng.component.html
+++ b/src/app/components/shared/table-primeng/table-primeng.component.html
@@ -96,7 +96,7 @@
       </tr>
     </ng-template>
     <ng-template pTemplate="paginatorleft">
-      <p-button type="button" icon="{{icon6}}" styleClass="p-button-text"></p-button>
+      <p-button pTooltip="See more information" type="button" icon="{{icon6}}" styleClass="p-button-text"></p-button>
     </ng-template>
   </p-table>
 </div>
