--- a/src/app/components/shared/input-primeng/input-primeng.component.html
+++ b/src/app/components/shared/input-primeng/input-primeng.component.html
@@ -14,6 +14,8 @@
         [required]="required"
         [class]="styleClass"
         [(ngModel)]="value"
+        [pTooltip]="labelTooltip"
+        [tooltipPosition]="positionTooltip.toLowerCase()"
         pInputText/>
       <textarea
         *ngIf="isTextArea"
@@ -25,6 +27,8 @@
         [disabled]="disabled"
         [required]="required"
         (change)="validations()"
+        [pTooltip]="labelTooltip"
+        [tooltipPosition]="positionTooltip.toLowerCase()"
         (keyup)="validations()"
       ></textarea>
       <p-fileUpload
