--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,14 @@
 <p-menubar [model]="items">
   <ng-template pTemplate="end">
-    <span>Fri 13:07</span>
+    <p-avatar
+      pBadge
+      [value]="'4'"
+      [severity]="'danger'"
+      [image]="'assets/showcase/images/demo/avatar/amyelsner.png'"
+      [style]="{marginTop:'5px', marginRight: '5px', marginBottom: '0px', marginLeft: '0px',
+      paddingTop:'5px', paddingRight: '5px', paddingBottom: '0px', paddingLeft: '0px'}"
+      [size]="'large'"
+    ></p-avatar>
   </ng-template>
 </p-menubar>
 <div class="dock-window dock-advanced">
